--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,17 @@ div.footer {
 	bottom: 0;
 }
 
+span.tt-dropdown-menu {
+	background-color: #222;
+	color:  #91D584;
+	font-size: 20px;
+	padding: 0 5px 0 10px;
+}
+
+.tt-is-under-cursor {
+	color: white;
+}
+
 @media screen and (max-width: 499px) {
 	body {
 		width: 480px;
