--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,9 @@ body {
     padding-bottom: 40px;
     background-color: #222;
     color: #FFF;
-/*     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif; */
 	font-family: "ComicBook", "Lucida Sans Unicode", sans-serif;
     height: 100%;
-	width: 960px;
+/* 	width: 960px; */
 	margin-left: 20px;
 }
 h1 { color: #91D584; margin-bottom: -10px; }
@@ -23,7 +22,7 @@ a {color: #61DB4A ; text-decoration: none;}
 
 div.container {
 	width:960px;
-    margin:0 auto;
+    margin:0px auto;
     position:relative;
 }
 
@@ -101,6 +100,24 @@ img {
 	text-align: center;
 }
 
+/* input#search {
+     -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+	
+    background: rgba(255,255,255,0.5);
+}
+
+#attr {
+	
+} */
+
 div.footer {
 	position: absolute;
 	bottom: 0;
@@ -162,6 +179,17 @@ span.tt-dropdown-menu {
 	}
 	img {
 		max-height: 125px;
+	}
+}
+
+@media screen and (max-width: 959px){
+	.left {
+		visibility: hidden;
+		height: 0px;
+	}
+	.right {
+		visibility: hidden;
+		height: 0px;
 	}
 }
 
